gccida/c1/sched_analyze_2
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1169:24: error: unknown type name 'deps_0'
void  sched_analyze_2( deps_0 *deps, rtx x, rtx insn) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1176:4: error: expected ';' after expression
rtx v10; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1176:5: error: use of undeclared identifier 'v10'
rtx v10; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1177:4: error: expected ';' after expression
rtx pending_read_insns; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1177:5: error: use of undeclared identifier 'pending_read_insns'
rtx pending_read_insns; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1178:6: error: use of undeclared identifier 'p_pending_read_mems'
rtx *p_pending_read_mems; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1179:4: error: expected ';' after expression
rtx v13; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1179:5: error: use of undeclared identifier 'v13'
rtx v13; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1180:4: error: expected ';' after expression
rtx pending_write_insns; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1180:5: error: use of undeclared identifier 'pending_write_insns'
rtx pending_write_insns; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1181:6: error: use of undeclared identifier 'p_pending_write_mems'
rtx *p_pending_write_mems; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1182:4: error: expected ';' after expression
rtx v16; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1182:5: error: use of undeclared identifier 'v16'; did you mean 'v6'?
rtx v16; // r12 
    ^~~
    v6
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1172:9: note: 'v6' declared here
__int64 v6; // r12 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1183:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1183:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1192:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1192:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1209:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( int *)x[2]; 
             ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/sched-deps.c:1215:32: error: expected expression
sched_analyze_2( deps, *( rtx *)&v8[2 * v9++ + 2], insn); 
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/sched_analyze_2/src/obj/sched-deps.o] Error 1
